add debug docker container

--- a/docker-images/debug/Dockerfile
+++ b/docker-images/debug/Dockerfile
@@ -1,14 +1,8 @@
 FROM ubuntu:latest
 
-ENV DEBIAN_FRONTEND=noninteractive
-
 RUN apt-get update && \
     apt-get install -y hping3 iperf3 netcat && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-COPY run.sh run.sh
-
-RUN chmod +x run.sh
-
-CMD ["bash", "run.sh"]
+CMD ["tail", "-f", "/dev/null"]
