add udp client for hping3 e2e measurements

--- a/docker-images/debug/Dockerfile
+++ b/docker-images/debug/Dockerfile
@@ -5,4 +5,6 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+COPY simple_udp_server.py simple_udp_server.py
+
 CMD ["tail", "-f", "/dev/null"]
