--- a/cloudlab-tests/test1/client/Dockerfile
+++ b/cloudlab-tests/test1/client/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
-    apt-get install -y hping3 iperf3 netcat && \
+    apt-get install -y hping3 iperf3 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
