add iperf2 to debug image

--- a/docker-images/debug/Dockerfile
+++ b/docker-images/debug/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 
 RUN apt-get update && \
-    apt-get install -y hping3 iperf3 curl python3 netcat-openbsd && \
+    apt-get install -y hping3 iperf3 iperf curl python3 netcat-openbsd && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
